# MemorySlice

./: .gitignore  .gitmodules  README.md
Configuration/cmake-template/: CMakeLists.txt
Configuration/dotfile/: .vimrc  .zshrc
ExperimentalRepo/: README.md
ExperimentalRepo/TinySTL/: README.md
ExperimentalRepo/TinySTL/docs/: ClassGraphAndPlans.md
FrameworkSlice/Flutter/: Readme.md
FrameworkSlice/Flutter/code/: Readme.md
FrameworkSlice/Flutter/plugin_sqflite_study/: README.md  pubspec.yaml
MemoryTrash/: exam.c  t.c  te.cpp  test.cpp  test_al.cpp  test_class_init.cpp
ProgrammingLanguageSlice/cpp-home/: README.md
ProgrammingLanguageSlice/cpp-home/features/: cpp14_structure_bind.cpp  cpp17_fold_expression.cpp  cpp20_concept.cpp  deprecated.cpp
ProgrammingLanguageSlice/cpp-home/mock_others_PL/: py_range.cc
ProgrammingLanguageSlice/cpp-home/morbids/: free_twice.cc
ProgrammingLanguageSlice/cpp-home/raw/: raw_arr_and_raw_pointer.cpp
ProgrammingLanguageSlice/cpp-home/std/: std_type_trait_judge_base_class_type.cc
ProgrammingLanguageSlice/cpp_home/raw/: raw_function_pointer.cpp
ProgrammingLanguageSlice/cpp_home/std/: std_greater.cpp
ProgrammingLanguageSlice/python-home/attempts/: pkg_numba.py
ProgrammingLanguageSlice/rust-home/: basic.rs  borrow_semantic.rs  enums.rs  slice_study.rs  structure.rs  unwrap.rs
Recipes/: library.sqlite
Recipes/library_app/: README.md
Recipes/library_widget_app/lib/: db_widget.dart
Scripts/Shell/: shutdown_helper.sh
StudyProgramming/BookExercise/MCppProgrammingwithTDD/: CMakeLists.txt
StudyProgramming/BookExercise/MCppProgrammingwithTDD/dep/: README.md
StudyProgramming/BookExercise/MCppProgrammingwithTDD/test/: test.cpp
(+81 files in other folders)
